crates/rattler_solve/tests/backends/snapshots/backends__backends__resolvo__panic_on_constraint.snap
---
source: crates/rattler_solve/tests/backends/mod.rs
expression: result.unwrap_err()
---
Cannot solve the request because of: The following packages are incompatible
└─ xbar * can be installed with any of the following options:
   └─ xbar 1 would require
      └─ xfoo >=2, which can be installed with any of the following options:
         └─ xfoo 2
├─ the constraint xfoo ==1 cannot be fulfilled
