crates/rattler_solve/tests/backends/snapshots/backends__backends__resolvo__solve_dummy_repo_install_non_existent.snap
---
source: crates/rattler_solve/tests/backends/mod.rs
expression: err
---
Unsolvable(
    [
        "No candidates were found for asdfasdf *.\n",
    ],
)
